@@ -197,9 +197,9 @@ Sebastian Riedel, C<sri@oook.de>
 
 =head1 THANK YOU
 
-Andrew Ruthven, Danijel Milicevic, David Naughton, Gary Ashton Jones,
-Jesse Sheidlower, Johan Lindstrom, Marcus Ramberg, Tatsuhiko Miyagawa
-and all the others who've helped.
+Andrew Ruthven, Christopher Hicks, Danijel Milicevic, David Naughton,
+Gary Ashton Jones, Jesse Sheidlower, Johan Lindstrom, Marcus Ramberg,
+Tatsuhiko Miyagawa and all the others who've helped.
 
 =head1 LICENSE
 
